# gazebo_camera_example

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
install/: local_setup.sh  setup.sh
install/camera/share/ament_index/resource_index/package_run_dependencies/: camera
install/camera/share/ament_index/resource_index/parent_prefix_path/: camera
install/camera/share/camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/camera/share/camera/cmake/: cameraConfig-version.cmake  cameraConfig.cmake
install/camera/share/camera/description/: cam_world.sdf  camera.urdf.xacro  materials.xacro  shapes.xacro
install/camera/share/camera/environment/: ament_prefix_path.dsv  path.dsv
install/camera/share/camera/launch/: camera.launch.py
install/camera/share/camera/worlds/: ground_plane.world
log/: latest_build
src/camera/: CMakeLists.txt  package.xml
src/camera/description/: camera.urdf.xacro  materials.xacro  shapes.xacro
src/camera/launch/: camera.launch.py
src/camera/worlds/: ground_plane.world
